<resources>
    <string name="app_name">用人宝</string>
    <string name="rule_text">规则说明</string>
    <string name="require">接单要求</string>
    <string name="my_contract">电子签约</string>
    <string name="unauth">去认证</string>
    <string name="login_hint">立即登录，天天都有单！</string>
    <string name="setting">设置</string>
    <string name="pick_money">提现</string>
    <string name="check_detail">查看明细 ></string>
    <string name="mission_name">任务名称</string>
    <string name="mission_pay">预计费用</string>
    <string name="mission_time">任务时长</string>
    <string name="mission_add">任务地址</string>
    <string name="mission_des">任务描述</string>
    <string name="company_name">任务来源</string>
    <string name="mission_no">任务编号</string>
    <string name="user_auth">实名认证</string>
    <string name="user_bind_phone">绑定手机号</string>
    <string name="user_card">修改银行卡</string>
    <string name="user_password_change">登录密码修改</string>
    <string name="user_photo">头像</string>
    <string name="user_set_paypassword">支付密码设置</string>
    <string name="nick_name">昵称</string>
    <string name="go_auth">去认证</string>
    <string name="go_pay">去缴纳</string>
    <string name="auth">实名认证</string>
    <string name="go_sign">去签约</string>
    <string name="diaglog_step">接单前请完成以下要求</string>
    <string name="auth_step">提交身份证号码和姓名进行认证</string>
    <string name="sign_step">签署灵活从业合作协议</string>
    <string name="pay">缴纳押金</string>
    <string name="sign_jd">因该任务的需求，平台将自动为您每天首单购买会员保障服务，费用将在您提现时结算</string>
    <string name="loading_txt">正在努力加载...</string>
    <string name="nickname_info">2-20个字符，可由中英文、数字、“_”、“-”组成</string>
    <!--    <string name="wright_nickname">请填写您的昵称</string>-->
    <string name="wright_nickname">请填写</string>
    <string name="sendCode">短信已发送</string>
    <string name="getCode">获取验证码</string>
    <string name="bankcard_str">为了保障账户安全，请添加一张您的银行卡，用于收入发放和提现收款使用，仅支持储蓄卡</string>
    <string name="user_dialog_left_str">不同意并退出</string>
    <string name="user_dialog_right_str">同意</string>
    <string name="user_dialog_title">用户许可协议及隐私政策</string>
</resources>
